zero-to-mil/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  /* :root {
    --background: 0 0% 100%;
    --foreground: 225 33% 19%;
    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;
    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;
    --radius: 0.5rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  } */

  .root {
    --background: 226 68% 7%;
    --cardtitle: 225 16% 61%;
    --betcard: 225 29% 19%;
    --secondrybetcard: 225 29% 21%;
    --greenbetcard: 185 81% 16%;
    --foreground: 0 0% 100%;
    --greyf: 0 0% 64%;
    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
    --primary: 348 88% 62%;
    --primary-foreground: 0 0% 100%;
    --secondary: 24 100% 50%;
    --secondary-foreground: 0 0% 100%;

    --muted: 0 0% 38%;
    --muted-foreground: 215 20.2% 65.1%;
    --disabled: 0 0% 62%;
    --disabled-foreground: 0 0% 100%;
    --accent: 216 28% 17%;
    --accent-foreground: 210 40% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
    --haravara: 152 100% 52%;
    --haravara-foreground: 185 71% 19%;
    --navbackground: 215 33% 13%;
    --icon: 217 100% 77%;
    --border: 217.2 32.6% 17.5%;
    --input: 225 33% 19%;
    --pointinput: 225 30% 32%;
    --subinput: 225 34% 24%;
    --menu: 225 44% 14%;
    --ring: 212.7 26.8% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }

  @media (prefers-color-scheme: dark) {
    :root {
      --background: 226 68% 7%;
      --black: 0 0 0%;
      --cardtitle: 225 16% 61%;
      --betcard: 225 29% 19%;
      --secondrybetcard: 225 29% 21%;
      --greenbetcard: 185 81% 16%;
      --foreground: 0 0% 100%;
      --greyf: 0 0% 64%;
      --card: 222.2 84% 4.9%;
      --card-foreground: 210 40% 98%;
      --popover: 222.2 84% 4.9%;
      --popover-foreground: 210 40% 98%;
      --primary: 348 88% 62%;
      --primary-foreground: 0 0% 100%;
      --secondary: 24 100% 50%;
      --secondary-foreground: 0 0% 100%;
      --muted: 0 0% 38%;
      --muted-foreground: 215 20.2% 65.1%;
      --disabled: 0 0% 62%;
      --disabled-foreground: 0 0% 100%;
      --accent: 216 28% 17%;
      --accent-foreground: 210 40% 98%;
      --destructive: 0 62.8% 30.6%;
      --destructive-foreground: 210 40% 98%;
      --haravara: 152 100% 52%;
      --haravara-foreground: 185 71% 19%;
      --navbackground: 215 33% 13%;
      --icon: 217 100% 77%;
      --border: 217.2 32.6% 17.5%;
      --input: 225 33% 19%;

      --pointinput: 225 30% 32%;
      --subinput: 225 34% 24%;
      --menu: 225 44% 14%;
      --ring: 212.7 26.8% 83.9%;
      --chart-1: 220 70% 50%;
      --chart-2: 160 60% 45%;
      --chart-3: 30 80% 55%;
      --chart-4: 280 65% 60%;
      --chart-5: 340 75% 55%;
      --success: 142 76% 36%;
      --warning: 45 100% 50%;
    }
  }

  .dark {
    --background: 226 68% 7%;
    --cardtitle: 225 16% 61%;
    --betcard: 225 29% 19%;
    --secondrybetcard: 225 29% 21%;
    --foreground: 0 0% 100%;
    --greyf: 0 0% 64%;
    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
    --primary: 348 88% 62%;
    --primary-foreground: 0 0% 100%;
    --secondary: 24 100% 50%;
    --secondary-foreground: 0 0% 100%;
    --muted: 0 0% 38%;
    --muted-foreground: 215 20.2% 65.1%;
    --disabled: 0 0% 62%;
    --disabled-foreground: 0 0% 100%;
    --accent: 216 28% 17%;
    --accent-foreground: 210 40% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
    --haravara: 152 100% 52%;
    --haravara-foreground: 185 71% 19%;
    --navbackground: 215 33% 13%;
    --icon: 217 100% 77%;
    --border: 217.2 32.6% 17.5%;
    --input: 225 33% 19%;
    --pointinput: 225 30% 32%;
    --subinput: 225 34% 24%;
    --menu: 225 44% 14%;
    --ring: 212.7 26.8% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
    --success: 142 76% 36%;
    --warning: 45 100% 50%;
  }
}

/* Regular/Normal */
@font-face {
  font-family: "Segoe UI";
  src: url("/fonts/segoeuithis.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

/* Bold */
@font-face {
  font-family: "Segoe UI";
  src: url("/fonts/segoeuithibd.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

/* Italic */
@font-face {
  font-family: "Segoe UI";
  src: url("/fonts/segoeuithisi.ttf") format("truetype");
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}

/* Bold Italic */
@font-face {
  font-family: "Segoe UI";
  src: url("/fonts/segoeuithisz.ttf") format("truetype");
  font-weight: bold;
  font-style: italic;
  font-display: swap;
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    font-family: "Segoe UI";
    @apply bg-background text-foreground;
  }
}

.vaul-overlay {
  pointer-events: none !important;
}

